// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component > renders button with default variant 1`] = `"inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2"`;

exports[`Button Component > should be rendered Slot when a Child is true 1`] = `null`;

exports[`Button Component > should be rendered the button when asChild is false 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2"
>
  Shadcn
</button>
`;

exports[`Button Component > should be rendered the button with the text "Boilerplate" 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2"
>
  Boilerplate
</button>
`;
